# gerrit-mcp

./: .env.template  .pre-commit-config.yaml  INTEGRATION_TESTING.md  LICENSE  MANIFEST.in  README.md  SERVER_SUMMARY.md  code_assistant_prompt.md  fastmcp_lib_docks.md  gerrit_api.txt  gerrit_mcp.sh  guidelines.txt  integration_test.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  ruff.toml  run_tests.py  setup.py  starter_prompt.txt  test_server.py
.github/workflows/: build_and_test.yml  lint.yml
guidelines/: code_review_guidelines.md
src/: __init__.py  server_direct.py
src/gerrit/: __init__.py  api.py  auth.py  models.py
src/mmcp/: __init__.py  server.py
src/mmcp/tools/: __init__.py  commit_tools.py  file_tools.py  review_tools.py
src/utils/: __init__.py  error_handling.py  logging.py
tests/: integration_test.py
tests/unit/: __init__.py  test_gerrit_api.py  test_mcp_tools.py
